--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <link rel="stylesheet" href="styles.css">
 <link rel="alternate" type="application/rss+xml" title="Explained Intuitively" href="index.xml"><meta property="og:title" content="Explained Intuitively - Learning Large Language Models - Explained Intuitively">
-<meta property="og:image" content="https://arunprakash.ai/posts/anthropic-messages-api-streaming-python/streaming.png">
+<meta property="og:image" content="https://arunprakash.ai/posts/anthropic-claude3-messages-images-claude3/images.png">
 <meta property="og:site-name" content="Explained Intuitively">
 <meta property="og:image:height" content="720">
 <meta property="og:image:width" content="1280">
 <meta name="twitter:title" content="Explained Intuitively - Learning Large Language Models - Explained Intuitively">
-<meta name="twitter:image" content="https://arunprakash.ai/posts/anthropic-messages-api-streaming-python/streaming.png">
+<meta name="twitter:image" content="https://arunprakash.ai/posts/anthropic-claude3-messages-images-claude3/images.png">
 <meta name="twitter:image-height" content="720">
 <meta name="twitter:image-width" content="1280">
 <meta name="twitter:card" content="summary_large_image">
@@ -177,7 +177,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 <div id="quarto-sidebar-glass" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(9)</span></div><div class="category" data-category="agents">agents <span class="quarto-category-count">(1)</span></div><div class="category" data-category="chat_completions">chat_completions <span class="quarto-category-count">(1)</span></div><div class="category" data-category="claude3">claude3 <span class="quarto-category-count">(2)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(4)</span></div><div class="category" data-category="handson">handson <span class="quarto-category-count">(3)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(9)</span></div><div class="category" data-category="messages-api">messages-api <span class="quarto-category-count">(2)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(7)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(4)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(12)</span></div><div class="category" data-category="agents">agents <span class="quarto-category-count">(1)</span></div><div class="category" data-category="chat_completions">chat_completions <span class="quarto-category-count">(1)</span></div><div class="category" data-category="claude3">claude3 <span class="quarto-category-count">(5)</span></div><div class="category" data-category="function-calling">function-calling <span class="quarto-category-count">(1)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(4)</span></div><div class="category" data-category="handson">handson <span class="quarto-category-count">(3)</span></div><div class="category" data-category="image-analysis">image-analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(12)</span></div><div class="category" data-category="messages-api">messages-api <span class="quarto-category-count">(4)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(7)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(4)</span></div><div class="category" data-category="python">python <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -190,12 +190,141 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711079732496" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="quarto-post image-right" data-index="0" data-categories="llm,claude3,messages-api,image-analysis" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711522447574" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
 <div class="thumbnail">
-<p><a href="./posts/anthropic-messages-api-streaming-python/messages_api_streaming.html"> <img src="./posts/anthropic-messages-api-streaming-python/streaming.png" class="thumbnail-image"> </a></p>
+<p><a href="./posts/anthropic-claude3-messages-images-claude3/messages_api_images.html"> <img src="./posts/anthropic-claude3-messages-images-claude3/images.png" class="thumbnail-image"> </a></p>
 </div>
 <div class="body">
-<a href="./posts/anthropic-messages-api-streaming-python/messages_api_streaming.html">
+<a href="./posts/anthropic-claude3-messages-images-claude3/messages_api_images.html">
+<h3 class="no-anchor listing-title">
+Anthropic Claude3: Messages API with Images
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('llm'); return false;">
+llm
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('claude3'); return false;">
+claude3
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('messages-api'); return false;">
+messages-api
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('image-analysis'); return false;">
+image-analysis
+</div>
+</div>
+<a href="./posts/anthropic-claude3-messages-images-claude3/messages_api_images.html">
+<div class="listing-description">
+<p>Anthropic’s Claude 3 models can understand and analyze images, allowing for conversations that include both text and visuals. Supported image formats include JPEG, PNG, GIF, and WebP. Multiple images can be included in a single request for analysis. Image analysis counts towards token usage. Claude has some limitations in image understanding but provides valuable interpretations.</p>
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/anthropic-claude3-messages-images-claude3/messages_api_images.html">
+<div class="listing-date">
+Mar 22, 2024
+</div>
+<div class="listing-author">
+Arun Prakash
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="llm,claude3,function-calling,python" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711522607530" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="thumbnail">
+<p><a href="./posts/anthropic-claude3-function-calling-tools-python/function_calling_tools.html"> <img src="./posts/anthropic-claude3-function-calling-tools-python/tools.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/anthropic-claude3-function-calling-tools-python/function_calling_tools.html">
+<h3 class="no-anchor listing-title">
+Anthropic Claude3: Function Calling Tools in Python
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('llm'); return false;">
+llm
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('claude3'); return false;">
+claude3
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('function-calling'); return false;">
+function-calling
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('python'); return false;">
+python
+</div>
+</div>
+<a href="./posts/anthropic-claude3-function-calling-tools-python/function_calling_tools.html">
+<div class="listing-description">
+<p>Function calling tools in Python allow extending Claude’s capabilities by integrating external functions or APIs. Define functions, create tool descriptions, construct system prompts, and process user messages to generate responses with function calls. This powerful technique enables Claude to perform tasks beyond its built-in knowledge.</p>
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/anthropic-claude3-function-calling-tools-python/function_calling_tools.html">
+<div class="listing-date">
+Mar 22, 2024
+</div>
+<div class="listing-author">
+Arun Prakash
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="2" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711522520104" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="thumbnail">
+<p><a href="./posts/anthropic-claude3-messages-api-json-mode/messages_api_json.html"> <img src="./posts/anthropic-claude3-messages-api-json-mode/json.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/anthropic-claude3-messages-api-json-mode/messages_api_json.html">
+<h3 class="no-anchor listing-title">
+Anthropic Claude3: Messages API with JSON Mode
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('llm'); return false;">
+llm
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('claude3'); return false;">
+claude3
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('messages-api'); return false;">
+messages-api
+</div>
+</div>
+<a href="./posts/anthropic-claude3-messages-api-json-mode/messages_api_json.html">
+<div class="listing-description">
+<p>Anthropic’s Claude AI model can generate structured JSON data by following specific techniques. By providing clear instructions and examples, developers can extract JSON from Claude’s responses using string parsing, partial responses, stop sequences, or XML-like tags. The JSON can then be easily parsed and integrated into applications or workflows.</p>
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/anthropic-claude3-messages-api-json-mode/messages_api_json.html">
+<div class="listing-date">
+Mar 22, 2024
+</div>
+<div class="listing-author">
+Arun Prakash
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="3" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711079732496" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="thumbnail">
+<p><a href="./posts/anthropic-claude3-messages-api-streaming-python/messages_api_streaming.html"> <img src="./posts/anthropic-claude3-messages-api-streaming-python/streaming.png" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/anthropic-claude3-messages-api-streaming-python/messages_api_streaming.html">
 <h3 class="no-anchor listing-title">
 Anthropic Claude3: Messages API with Streaming
 </h3>
@@ -214,14 +343,14 @@ claude3
 messages-api
 </div>
 </div>
-<a href="./posts/anthropic-messages-api-streaming-python/messages_api_streaming.html">
+<a href="./posts/anthropic-claude3-messages-api-streaming-python/messages_api_streaming.html">
 <div class="listing-description">
 <p>Anthropic’s Messages API supports streaming mode for real-time conversational AI responses. Using server-sent events (SSE), the API incrementally streams message content, allowing for dynamic user experiences. SDKs simplify implementation, while raw HTTP streaming is available for custom integrations. Developers can handle various event types and gracefully process unknown events.</p>
 </div>
 </a>
 </div>
 <div class="metadata">
-<a href="./posts/anthropic-messages-api-streaming-python/messages_api_streaming.html">
+<a href="./posts/anthropic-claude3-messages-api-streaming-python/messages_api_streaming.html">
 <div class="listing-date">
 Mar 22, 2024
 </div>
@@ -231,7 +360,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711079311589" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="4" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711079311589" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/anthropic-claude3-messages-api-python/messages_api.html"> <img src="./posts/anthropic-claude3-messages-api-python/messages_api.png" class="thumbnail-image"> </a></p>
 </div>
@@ -272,7 +401,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="llm,openai,agents" data-listing-date-sort="1706796000000" data-listing-file-modified-sort="1706834481771" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3">
+<div class="quarto-post image-right" data-index="5" data-categories="llm,openai,agents" data-listing-date-sort="1706796000000" data-listing-file-modified-sort="1706834481771" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3">
 <div class="thumbnail">
 <p><a href="./posts/ai-assistants-crewai/classroom_crew.html"> <img src="./posts/ai-assistants-crewai/crew.png" class="thumbnail-image"> </a></p>
 </div>
@@ -313,7 +442,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-categories="llm,openai,openai_assistants_api,chat_completions,handson" data-listing-date-sort="1705672800000" data-listing-file-modified-sort="1705720419494" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
+<div class="quarto-post image-right" data-index="6" data-categories="llm,openai,openai_assistants_api,chat_completions,handson" data-listing-date-sort="1705672800000" data-listing-file-modified-sort="1711414840781" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
 <div class="thumbnail">
 <p><a href="./posts/chatcompletions-vs-assistants-ai-openai/assistants_chatcomplettion.html"> <img src="./posts/chatcompletions-vs-assistants-ai-openai/logo.png" class="thumbnail-image"> </a></p>
 </div>
@@ -360,7 +489,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1705154400000" data-listing-file-modified-sort="1705172123774" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="7" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1705154400000" data-listing-file-modified-sort="1705172123774" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/personalised-news-social-media-openai-assistants-api/news_assistant_tools.html"> <img src="./posts/personalised-news-social-media-openai-assistants-api/0_0.webp" class="thumbnail-image"> </a></p>
 </div>
@@ -407,7 +536,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="5" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704808800000" data-listing-file-modified-sort="1704889524781" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="8" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704808800000" data-listing-file-modified-sort="1711414845141" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/tourist_assistant_tools.html"> <img src="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png" class="thumbnail-image"> </a></p>
 </div>
@@ -454,7 +583,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="6" data-categories="llm,openai,function_calling,openai_assistants_api" data-listing-date-sort="1704376800000" data-listing-file-modified-sort="1704688333035" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="quarto-post image-right" data-index="9" data-categories="llm,openai,function_calling,openai_assistants_api" data-listing-date-sort="1704376800000" data-listing-file-modified-sort="1704688333035" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
 <div class="thumbnail">
 <p><a href="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistants_function_calling.html"> <img src="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistant.png" class="thumbnail-image"> </a></p>
 </div>
@@ -498,7 +627,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="7" data-categories="llm,openai,function_calling" data-listing-date-sort="1704204000000" data-listing-file-modified-sort="1704735811737" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="10" data-categories="llm,openai,function_calling" data-listing-date-sort="1704204000000" data-listing-file-modified-sort="1704735811737" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/openai-parallel-function-calling-handson-tools/function_calling.html"> <img src="./posts/openai-parallel-function-calling-handson-tools/music.png" class="thumbnail-image"> </a></p>
 </div>
@@ -539,7 +668,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="8" data-categories="llm,openai" data-listing-date-sort="1702735200000" data-listing-file-modified-sort="1704907179299" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="11" data-categories="llm,openai" data-listing-date-sort="1702735200000" data-listing-file-modified-sort="1704907179299" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/understanding-openai-chatcompletion-model-parameters/llm_temperature.html"> <img src="./posts/understanding-openai-chatcompletion-model-parameters/IMG_F4CC52CE7F7F-1.jpeg" class="thumbnail-image"> </a></p>
 </div>
