--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <link rel="stylesheet" href="styles.css">
 <link rel="alternate" type="application/rss+xml" title="Explained Intuitively" href="index.xml"><meta property="og:title" content="Explained Intuitively - Learning Generative AI - Explained Intuitively">
-<meta property="og:image" content="https://arunprakash.ai/posts/anthropic-claude3-industry-usecases/industry_yt.jpg">
+<meta property="og:image" content="https://arunprakash.ai/posts/dwarkesh-patel-anthropic-claude3-opus-python/maxresdefault.jpg">
 <meta property="og:site-name" content="Explained Intuitively">
 <meta name="twitter:title" content="Explained Intuitively - Learning Generative AI - Explained Intuitively">
-<meta name="twitter:image" content="https://arunprakash.ai/posts/anthropic-claude3-industry-usecases/industry_yt.jpg">
+<meta name="twitter:image" content="https://arunprakash.ai/posts/dwarkesh-patel-anthropic-claude3-opus-python/maxresdefault.jpg">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="canonical" href="https://arunprakash.ai/index.html" />
 </head>
@@ -173,7 +173,7 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 <div id="quarto-sidebar-glass" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(13)</span></div><div class="category" data-category="agents">agents <span class="quarto-category-count">(1)</span></div><div class="category" data-category="ai">ai <span class="quarto-category-count">(1)</span></div><div class="category" data-category="chat_completions">chat_completions <span class="quarto-category-count">(1)</span></div><div class="category" data-category="claude3">claude3 <span class="quarto-category-count">(5)</span></div><div class="category" data-category="function-calling">function-calling <span class="quarto-category-count">(1)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(4)</span></div><div class="category" data-category="handson">handson <span class="quarto-category-count">(3)</span></div><div class="category" data-category="image-analysis">image-analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(12)</span></div><div class="category" data-category="messages-api">messages-api <span class="quarto-category-count">(4)</span></div><div class="category" data-category="newsletter-generation">newsletter-generation <span class="quarto-category-count">(1)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(7)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(4)</span></div><div class="category" data-category="property-appraisal">property-appraisal <span class="quarto-category-count">(1)</span></div><div class="category" data-category="python">python <span class="quarto-category-count">(1)</span></div><div class="category" data-category="real-estate">real-estate <span class="quarto-category-count">(1)</span></div><div class="category" data-category="streamlit">streamlit <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(14)</span></div><div class="category" data-category="agents">agents <span class="quarto-category-count">(1)</span></div><div class="category" data-category="ai">ai <span class="quarto-category-count">(2)</span></div><div class="category" data-category="chat_completions">chat_completions <span class="quarto-category-count">(1)</span></div><div class="category" data-category="claude3">claude3 <span class="quarto-category-count">(5)</span></div><div class="category" data-category="data-analysis">data-analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="function-calling">function-calling <span class="quarto-category-count">(1)</span></div><div class="category" data-category="function_calling">function_calling <span class="quarto-category-count">(4)</span></div><div class="category" data-category="handson">handson <span class="quarto-category-count">(3)</span></div><div class="category" data-category="image-analysis">image-analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="llm">llm <span class="quarto-category-count">(12)</span></div><div class="category" data-category="messages-api">messages-api <span class="quarto-category-count">(4)</span></div><div class="category" data-category="newsletter-generation">newsletter-generation <span class="quarto-category-count">(1)</span></div><div class="category" data-category="nlp">nlp <span class="quarto-category-count">(1)</span></div><div class="category" data-category="openai">openai <span class="quarto-category-count">(7)</span></div><div class="category" data-category="openai_assistants_api">openai_assistants_api <span class="quarto-category-count">(4)</span></div><div class="category" data-category="property-appraisal">property-appraisal <span class="quarto-category-count">(1)</span></div><div class="category" data-category="python">python <span class="quarto-category-count">(1)</span></div><div class="category" data-category="real-estate">real-estate <span class="quarto-category-count">(1)</span></div><div class="category" data-category="streamlit">streamlit <span class="quarto-category-count">(1)</span></div><div class="category" data-category="visualization">visualization <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -186,7 +186,51 @@ gtag('config', 'G-71NZ7KQLWE', { 'anonymize_ip': true});
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="ai,real-estate,property-appraisal,newsletter-generation,streamlit" data-listing-date-sort="1711548000000" data-listing-file-modified-sort="1711552112103" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="quarto-post image-right" data-index="0" data-categories="ai,nlp,data-analysis,visualization" data-listing-date-sort="1711893600000" data-listing-file-modified-sort="1712018614344" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
+<div class="thumbnail">
+<p><a href="./posts/dwarkesh-patel-anthropic-claude3-opus-python/podcast_analysis.html"> <img src="./posts/dwarkesh-patel-anthropic-claude3-opus-python/maxresdefault.jpg" class="thumbnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/dwarkesh-patel-anthropic-claude3-opus-python/podcast_analysis.html">
+<h3 class="no-anchor listing-title">
+Book Recommendations, Interesting Advices, Career Tips from Dwarkesh Patel’s Podcasts using Anthropic’s Claude 3 API
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('ai'); return false;">
+ai
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('nlp'); return false;">
+nlp
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('data-analysis'); return false;">
+data-analysis
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('visualization'); return false;">
+visualization
+</div>
+</div>
+<a href="./posts/dwarkesh-patel-anthropic-claude3-opus-python/podcast_analysis.html">
+<div class="listing-description">
+<p>Discover the most recommended books and intriguing ideas from Dwarkesh Patel’s podcast guests. This project analyzes 63 podcast transcripts using Anthropic’s Claude 3 API, visualizes key metrics, and estimates the total cost based on token usage.</p>
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/dwarkesh-patel-anthropic-claude3-opus-python/podcast_analysis.html">
+<div class="listing-date">
+Apr 1, 2024
+</div>
+<div class="listing-author">
+Arun Prakash
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="ai,real-estate,property-appraisal,newsletter-generation,streamlit" data-listing-date-sort="1711548000000" data-listing-file-modified-sort="1711552112103" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
 <div class="thumbnail">
 <p><a href="./posts/anthropic-claude3-industry-usecases/real_estate.html"> <img src="./posts/anthropic-claude3-industry-usecases/industry_yt.jpg" class="thumbnail-image"> </a></p>
 </div>
@@ -233,7 +277,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="llm,claude3,messages-api,image-analysis" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711522447574" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
+<div class="quarto-post image-right" data-index="2" data-categories="llm,claude3,messages-api,image-analysis" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711522447574" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
 <div class="thumbnail">
 <p><a href="./posts/anthropic-claude3-messages-images-claude3/messages_api_images.html"> <img src="./posts/anthropic-claude3-messages-images-claude3/images.png" class="thumbnail-image"> </a></p>
 </div>
@@ -277,7 +321,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="llm,claude3,function-calling,python" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711522607530" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="3" data-categories="llm,claude3,function-calling,python" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711522607530" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/anthropic-claude3-function-calling-tools-python/function_calling_tools.html"> <img src="./posts/anthropic-claude3-function-calling-tools-python/tools.png" class="thumbnail-image"> </a></p>
 </div>
@@ -321,7 +365,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711522520104" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="quarto-post image-right" data-index="4" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711522520104" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
 <div class="thumbnail">
 <p><a href="./posts/anthropic-claude3-messages-api-json-mode/messages_api_json.html"> <img src="./posts/anthropic-claude3-messages-api-json-mode/json.png" class="thumbnail-image"> </a></p>
 </div>
@@ -362,7 +406,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711079732496" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="quarto-post image-right" data-index="5" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711079732496" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
 <div class="thumbnail">
 <p><a href="./posts/anthropic-claude3-messages-api-streaming-python/messages_api_streaming.html"> <img src="./posts/anthropic-claude3-messages-api-streaming-python/streaming.png" class="thumbnail-image"> </a></p>
 </div>
@@ -403,7 +447,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="5" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711079311589" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="6" data-categories="llm,claude3,messages-api" data-listing-date-sort="1711029600000" data-listing-file-modified-sort="1711079311589" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/anthropic-claude3-messages-api-python/messages_api.html"> <img src="./posts/anthropic-claude3-messages-api-python/messages_api.png" class="thumbnail-image"> </a></p>
 </div>
@@ -444,7 +488,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="6" data-categories="llm,openai,agents" data-listing-date-sort="1706796000000" data-listing-file-modified-sort="1706834481771" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3">
+<div class="quarto-post image-right" data-index="7" data-categories="llm,openai,agents" data-listing-date-sort="1706796000000" data-listing-file-modified-sort="1706834481771" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3">
 <div class="thumbnail">
 <p><a href="./posts/ai-assistants-crewai/classroom_crew.html"> <img src="./posts/ai-assistants-crewai/crew.png" class="thumbnail-image"> </a></p>
 </div>
@@ -485,7 +529,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="7" data-categories="llm,openai,openai_assistants_api,chat_completions,handson" data-listing-date-sort="1705672800000" data-listing-file-modified-sort="1711414840781" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
+<div class="quarto-post image-right" data-index="8" data-categories="llm,openai,openai_assistants_api,chat_completions,handson" data-listing-date-sort="1705672800000" data-listing-file-modified-sort="1711414840781" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1">
 <div class="thumbnail">
 <p><a href="./posts/chatcompletions-vs-assistants-ai-openai/assistants_chatcomplettion.html"> <img src="./posts/chatcompletions-vs-assistants-ai-openai/logo.png" class="thumbnail-image"> </a></p>
 </div>
@@ -532,7 +576,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="8" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1705154400000" data-listing-file-modified-sort="1705172123774" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="9" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1705154400000" data-listing-file-modified-sort="1705172123774" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/personalised-news-social-media-openai-assistants-api/news_assistant_tools.html"> <img src="./posts/personalised-news-social-media-openai-assistants-api/0_0.webp" class="thumbnail-image"> </a></p>
 </div>
@@ -579,7 +623,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="9" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704808800000" data-listing-file-modified-sort="1711414845141" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="10" data-categories="llm,openai,function_calling,openai_assistants_api,handson" data-listing-date-sort="1704808800000" data-listing-file-modified-sort="1711414845141" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/tourist_assistant_tools.html"> <img src="./posts/building_a_personalised_travel_planner_using_openai_assistants_api/travel2.png" class="thumbnail-image"> </a></p>
 </div>
@@ -626,7 +670,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="10" data-categories="llm,openai,function_calling,openai_assistants_api" data-listing-date-sort="1704376800000" data-listing-file-modified-sort="1704688333035" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
+<div class="quarto-post image-right" data-index="11" data-categories="llm,openai,function_calling,openai_assistants_api" data-listing-date-sort="1704376800000" data-listing-file-modified-sort="1704688333035" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2">
 <div class="thumbnail">
 <p><a href="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistants_function_calling.html"> <img src="./posts/master-the-art-of-function-calling-in-openai-assistants-api-a-comprehensive-guide-for-beginners/assistant.png" class="thumbnail-image"> </a></p>
 </div>
@@ -670,7 +714,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="11" data-categories="llm,openai,function_calling" data-listing-date-sort="1704204000000" data-listing-file-modified-sort="1704735811737" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
+<div class="quarto-post image-right" data-index="12" data-categories="llm,openai,function_calling" data-listing-date-sort="1704204000000" data-listing-file-modified-sort="1704735811737" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4">
 <div class="thumbnail">
 <p><a href="./posts/openai-parallel-function-calling-handson-tools/function_calling.html"> <img src="./posts/openai-parallel-function-calling-handson-tools/music.png" class="thumbnail-image"> </a></p>
 </div>
@@ -711,7 +755,7 @@ Arun Prakash
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="12" data-categories="llm,openai" data-listing-date-sort="1702735200000" data-listing-file-modified-sort="1704907179299" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
+<div class="quarto-post image-right" data-index="13" data-categories="llm,openai" data-listing-date-sort="1702735200000" data-listing-file-modified-sort="1704907179299" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7">
 <div class="thumbnail">
 <p><a href="./posts/understanding-openai-chatcompletion-model-parameters/llm_temperature.html"> <img src="./posts/understanding-openai-chatcompletion-model-parameters/IMG_F4CC52CE7F7F-1.jpeg" class="thumbnail-image"> </a></p>
 </div>
